# DISTRHO-Ports

./: .gitignore  README.md  meson_options.txt
libs/juce5/source/modules/juce_core/zip/zlib/: zlib.h
ports-juce5/: meson.build
ports-juce5/mimid/: meson.build
ports-juce5/mimid/source/: JuceHeader.h  JucePluginCharacteristics.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
ports-juce5/mimid/source/Engine/: AdsrEnvelope.h  AdssrEnvelope.h  AudioUtils.h  Bank.h  CubeDist.h  CubeFold.h  DelayLine.h  Filter.h  Lfo.h  Motherboard.h  ObxdBank.h  ObxdOscillatorB.h  ObxdVoice.h  OscillatorB.h  Oscillators.h  ParamDefs.h  Params.h  ParamsEnum.h  PulseOsc.h  SquareDist.h  SquareFold.h  SquareGentle.h  SynthEngine.h  Voice.h  VoiceQueue.h
ports-juce6/: meson.build
