###############################################################################

if linux_embed
    plugin_srcs = files([
        'source/PluginProcessor.cpp',
    ])
else
    plugin_srcs = files([
        'source/PluginProcessor.cpp',
    ])
endif

plugin_name = 'MiMi-d'

###############################################################################
